; ModuleID = '/home/carl/AnghaBench/htop/darwin/extr_DarwinProcessList.c_ProcessList_allocateCPULoadInfo.c'
source_filename = "/home/carl/AnghaBench/htop/darwin/extr_DarwinProcessList.c_ProcessList_allocateCPULoadInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROCESSOR_CPU_LOAD_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Unable to retrieve CPU info\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ProcessList_allocateCPULoadInfo(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 4, i32* %3, align 4
  %5 = call i32 (...) @mach_host_self()
  %6 = load i32, i32* @PROCESSOR_CPU_LOAD_INFO, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = call i64 @host_processor_info(i32 %5, i32 %6, i32* %4, i32* %7, i32* %3)
  %9 = icmp ne i64 0, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 @CRT_fatalError(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %1
  %13 = load i32, i32* %4, align 4
  ret i32 %13
}

declare dso_local i64 @host_processor_info(i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @mach_host_self(...) #1

declare dso_local i32 @CRT_fatalError(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
